[gd_scene load_steps=2 format=3 uid="uid://ccnrnkw414kg6"]

[ext_resource type="Script" path="res://Scripts/Main Menu.gd" id="1_kt68n"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kt68n")

[node name="Gacha Button" type="Button" parent="."]
layout_mode = 2
offset_left = 107.0
offset_top = 520.0
offset_right = 369.0
offset_bottom = 576.0
text = "Gacha
"

[node name="Battle Button" type="Button" parent="."]
layout_mode = 2
offset_left = 434.0
offset_top = 512.0
offset_right = 786.0
offset_bottom = 580.0
text = "Battle
"

[node name="Quit Button" type="Button" parent="."]
layout_mode = 2
offset_left = 833.0
offset_top = 524.0
offset_right = 1021.0
offset_bottom = 569.0
text = "Quit
"

[connection signal="pressed" from="Gacha Button" to="." method="_on_gacha_button_pressed"]
[connection signal="pressed" from="Battle Button" to="." method="_on_battle_button_pressed"]
[connection signal="pressed" from="Quit Button" to="." method="_on_quit_button_pressed"]
